--- a/package.json
+++ b/package.json
@@ -7,15 +7,17 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "migrate": "node scripts/run-migrations.js"
   },
   "dependencies": {
-    "@formspree/react": "^2.5.1",
+    "@netlify/neon": "^0.1.0",
     "@react-three/drei": "^9.88.17",
     "@react-three/fiber": "^8.15.11",
     "clsx": "^2.0.0",
     "framer-motion": "^10.16.16",
     "lucide-react": "^0.294.0",
+    "pg": "^8.16.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.5",
